// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row component should render correctly with alignItems prop 1`] = `
<div
  className="sc-kDThTU kKaWTQ"
/>
`;

exports[`Row component should render correctly with margin all sides prop 1`] = `
<div
  className="sc-kDThTU dcdGRX"
/>
`;

exports[`Row component should render correctly with margin each axis prop 1`] = `
<div
  className="sc-kDThTU gZJOxc"
/>
`;

exports[`Row component should render correctly with margin each sides props 1`] = `
<div
  className="sc-kDThTU jwGPEF"
/>
`;

exports[`Row component should render correctly without props 1`] = `
<div
  className="sc-kDThTU htOar"
/>
`;
